feat: basic rednode cors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "deno.enablePaths": [
-    "./"
+    "./",
+    "./src",
+    "./static"
   ],
   "deno.enable": true,
   "editor.inlayHints.enabled": "off"
