--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,20 @@
 {
-    "fmt": {
-        "indentWidth": 4
-    },
-    "tasks": {
-        "dev": "deno run --allow-net --allow-env --allow-read --allow-write --watch index.ts "
-    }
+        "imports" : {
+                "hono/" :"https://deno.land/x/hono/",
+                "meilisearch" :"https://esm.sh/meilisearch"
+        },
+	"fmt": {
+		"useTabs": true,
+		"lineWidth": 80,
+		"indentWidth": 4,
+		"semiColons": true,
+		"singleQuote": false,
+		"proseWrap": "preserve",
+		"include": [
+			"src/"
+		]
+	},
+	"tasks": {
+		"dev": "deno run --allow-net --allow-env --allow-read --allow-write --watch index.ts "
+	}
 }
